--- a/styles/main.css
+++ b/styles/main.css
@@ -113,7 +113,7 @@ box-pack: center;
 
 @font-face {
     font-family: game;
-    src: url(http://127.0.0.1:8080/font/GlueGun.ttf);
+    src: url(../local/font/GlueGun.ttf);
 }
 
 #gameover_span {
